added redis cache template

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ DB_PASSWORD=banners_pass
 DB_SSL=disable
 DB_MAX_CONN=10
 PGDATA=/var/lib/postgresql/data/notification
+
+REDIS_USER=
+REDIS_PASS=
+REDIS_HOST=redis
+REDIS_PORT=6379
