--- a/configs/banners_config.yml
+++ b/configs/banners_config.yml
@@ -18,3 +18,9 @@ database:
 jwt:
   secret: "verysecretivejwt"
   expiration: 2160h
+
+redis:
+  user: ""
+  password: ""
+  host: "redis"
+  port: "5679"
