added redis implementation

--- a/deploy/banner/Dockerfile
+++ b/deploy/banner/Dockerfile
@@ -13,7 +13,7 @@ COPY . /banners/
 WORKDIR /banners/
 
 RUN make build-server
-RUN chown -R root ./bin/server
+RUN chown -R root ./bin/banners
 
 FROM alpine:latest
 
@@ -23,4 +23,4 @@ WORKDIR /root/
 COPY --from=builder /banners/bin .
 COPY --from=builder /banners/configs/banners_config.yml .
 
-CMD [ "./server", "-config", "banners_config.yml" ]
+CMD [ "./banners", "-config", "banners_config.yml" ]
