--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,7 @@ REDIS_USER=
 REDIS_PASS=
 REDIS_HOST=redis
 REDIS_PORT=6379
+
+TRACER_URL=http://otelcol:4318
+TRACER_SAMPLING_RATE=1.0
+PROMETHEUS_ADDR=http://prometheus:9090
