--- a/.golangci.pipeline.yaml
+++ b/.golangci.pipeline.yaml
@@ -3,7 +3,7 @@ run:
   timeout: 10m
   issues-exit-code: 1
   tests: true
-  skip-dirs:
+issues.exclude-dirs:
     - bin
     - vendor
     - docs
@@ -13,13 +13,14 @@ run:
     - pkg
 
 output:
-  format: colored-line-number
+  formats: 
+  - colored-line-number
   print-issued-lines: true
   print-linter-name: true
 
 linters-settings:
   govet:
-    check-shadowing: true
+    shadow: true
   dupl:
     threshold: 100
   goconst:
