further linter checks

--- a/docs/api.yml
+++ b/docs/api.yml
@@ -78,7 +78,7 @@ paths:
         - admin-banners
       summary: Получение всех баннеров c фильтрацией по фиче и/или тегу 
       description: "Получение данных о баннерах для админов c фильтрацией по фиче и/или тегу и возможностью ограничить количество баннеров. \
-      \ По умолчанию количество возвращаемых баннеров равняется 1000. Доступно только админам."
+      \ По умолчанию количество возвращаемых баннеров ограничено 1000, сдвиг по умолчанию равен 0. Доступно только админам."
       operationId: getBanners
       parameters:
         - in: query
