--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
       run: go build -v ./...
 
     - name: Integration tests
-      run: make run-integration-tests
-    -
+      run: make actions-integration-tests
+    - name: Unit tests
       run: go test -v -race -coverprofile="coverage.out" -covermode=atomic ./internal
     - name: Test coverage
       uses: codecov/codecov-action@v4
