--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,14 @@ jobs:
     - name: Build
       run: go build -v ./...
 
+    - name: Prepare integration test environment
+      uses: hoverkraft-tech/compose-action@v2.0.0
+      with:
+        compose-file: "./docker-compose-test.yml"
+        up-flags: "-d"
+        down-flags: "-d"
     - name: Integration tests
-      run: make actions-integration-tests
+      run: go test -tags=integration ./apitest
     - name: Unit tests
       run: go test -v -race -coverprofile="coverage.out" -covermode=atomic ./internal
     - name: Test coverage
