--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Integration tests
       run: go test -tags=integration ./apitest
     - name: Unit tests
-      run: go test -v -race -coverprofile="coverage.out" -covermode=atomic ./internal
+      run: go test -v -race -coverprofile="coverage.out" -covermode=atomic ./internal/...
     - name: Test coverage
       uses: codecov/codecov-action@v4
       with:
