--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,8 @@ jobs:
         DB_PASSWORD: banners_pass
         DB_SSL: disable
         REDIS_PORT: 6379
+    - name: Sleep for 5 seconds
+      run: sleep 5s
     - name: Integration tests
       run: go test -tags=integration ./apitest
     - name: Unit tests
