--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,10 +34,10 @@ jobs:
         REDIS_PORT: 6379
     - name: Sleep for 5 seconds
       run: sleep 5s
-    - name: Integration tests
-      run: go test -tags=integration ./apitest
     - name: Unit tests
       run: go test -v -race -coverprofile="coverage.out" -covermode=atomic ./internal/...
+    - name: Integration tests
+      run: go test -v -coverprofile="coverage.out" -covermode=atomic ./...
     - name: Test coverage
       uses: codecov/codecov-action@v4
       with:
