--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,9 +35,9 @@ jobs:
     - name: Sleep for 5 seconds
       run: sleep 5s
     - name: Unit tests
-      run: go test -v -race -coverprofile="coverage.out" -covermode=atomic ./internal/...
+      run: go test -v -race -coverprofile="coverage.out" -covermode=atomic --tags=unit ./...
     - name: Integration tests
-      run: go test -v -coverprofile="coverage.out" -covermode=atomic ./...
+      run: go test -v -coverprofile="coverage.out" -covermode=atomic --tags=integration ./...
     - name: Test coverage
       uses: codecov/codecov-action@v4
       with:
