--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,6 +34,8 @@ jobs:
         REDIS_PORT: 6379
     - name: Sleep for 5 seconds
       run: sleep 5s
+    - name: Get current directory
+      run: pwd && ls -a
     - name: Unit tests
       run: go test -v -race -covermode=atomic -tags=unit -cover -args -test.gocoverdir="./coverage/unit" ./...
     - name: Integration tests
