--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,12 +34,10 @@ jobs:
         REDIS_PORT: 6379
     - name: Sleep for 5 seconds
       run: sleep 5s
-    - name: Get current directory
-      run: pwd && ls -a
     - name: Unit tests
-      run: go test -v -race -covermode=atomic -tags=unit -cover -args -test.gocoverdir="./coverage/unit" ./...
+      run: go test -v -race -covermode=atomic -tags=unit -cover ./... -args -test.gocoverdir="${{ github.workspace }}/coverage/unit" 
     - name: Integration tests
-      run: go test -v -race -covermode=atomic -tags=integration -cover -args -test.gocoverdir="./coverage/integration" ./...
+      run: go test -v -race -covermode=atomic -tags=integration -cover ./... -args -test.gocoverdir="${{ github.workspace }}/coverage/integration"
     - name: Compute coverage
       run: go tool covdata textfmt -i=./coverage/unit,./coverage/integration -o coverage/profile && rm ./coverage/unit/* && rm ./coverage/integration/*
     - name: Test coverage
